--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "movie_rating",
   "version": "0.1.0",
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
-    "lint": "next lint",
-    "start": "next start",
-    "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\""
+    "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
@@ -17,6 +18,8 @@
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
+    "f": "^1.4.0",
+    "fs": "^0.0.1-security",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,7 +27,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
+    "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
@@ -39,7 +42,8 @@
     "prisma": "^4.5.0",
     "tailwindcss": "^3.2.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "tsx": "^3.12.1",
+    "typescript": "^4.9.4"
   },
   "ct3aMetadata": {
     "initVersion": "6.12.0"
