--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "f": "^1.4.0",
     "fs": "^0.0.1-security",
     "next": "13.1.1",
+    "next-plausible": "^3.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
@@ -42,7 +43,6 @@
     "prisma": "^4.5.0",
     "tailwindcss": "^3.2.0",
     "ts-node": "^10.9.1",
-    "tsx": "^3.12.1",
     "typescript": "^4.9.4"
   },
   "ct3aMetadata": {
