--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,8 @@
   "plugins": ["@typescript-eslint"],
   "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended"],
   "rules": {
+    "semi": "off",
+    "@typescript-eslint/semi": "warn",
     "@typescript-eslint/consistent-type-imports": "warn"
   }
 }
